fix(issue8) : adopt keytool encryption to config server

--- a/.gitignore
+++ b/.gitignore
@@ -90,5 +90,12 @@ logs/
 # MSA 도입 이후 민감 파일
 **/application-private.yaml
 
+# imhere-config의 민감 파일
+/imhere-config/src/main/resources/bootstrap.yaml
+
+# 암호화 키 파일
+*.jks
+*.p12
+
 # 도커 컴포즈 파일
 docker-compose.yml
