--- a/imhere-config/build.gradle
+++ b/imhere-config/build.gradle
@@ -37,6 +37,9 @@ dependencies {
 	
 	/// Actuator
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+
+	//For BootStrap => use Encryption
+	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
 	
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
