chore(issue10) : move auth logic to user-service module
실제 동작 가능 여부를 고려하지 않고, 우선 작업을 시작하기 위해 auth를 user-service 로 이동

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,5 +6,6 @@ include 'imhere-eureka'
 include 'imhere-api-gateway'
 
 // Business Modules
+include 'imhere-user-service'
 include 'imhere-notification-service'
 include 'imhere-prev'  // Previous monolithic version
