fix(issue10): move and some change the logic of loggin filter and discord service

--- a/imhere-api-gateway/src/main/resources/application.yaml
+++ b/imhere-api-gateway/src/main/resources/application.yaml
@@ -16,6 +16,15 @@ spring:
     gateway:
       server:
         webflux:
+          default-filters:
+            - name: LoggingFilter
+              args:
+                enabled: true
+                sendAlertOnError: true
+                ignoredPatterns:
+                  - /actuator
+                  - /health
+                  - /favicon.ico
           globalcors:
             corsConfigurations:
               '[/**]':
