--- a/imhere-user-service/build.gradle
+++ b/imhere-user-service/build.gradle
@@ -53,6 +53,29 @@ dependencies {
 	testRuntimeOnly 'com.h2database:h2'
 	testImplementation 'org.testcontainers:junit-jupiter'
 	testImplementation 'org.testcontainers:testcontainers'
+
+	//p6spy - SQL 쿼리 로깅(value가 상세히 보임)
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
+	//query_dsl
+	implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
+	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+}
+
+/// QUERY DSL 세부 설정
+def querydslDir = layout.buildDirectory.dir("generated/querydsl").get().asFile
+
+tasks.withType(JavaCompile).configureEach {
+	options.generatedSourceOutputDirectory.set(querydslDir)
+}
+
+sourceSets {
+	main.java.srcDirs += [querydslDir]
+}
+
+clean.doLast {
+	file(querydslDir).deleteDir()
 }
 
 ext {
