docs(issue17) : update config server settings
이전 작업에서 소실된 설정 파일 추가 후 해당 파일에 맞게 설정 변경

--- a/imhere-config/src/main/resources/application.yaml
+++ b/imhere-config/src/main/resources/application.yaml
@@ -5,8 +5,7 @@ spring:
   application:
     name: IMHERE-CONFIG
   profiles:
-    active: git
-    include: private
+    include: git
 
 management:
   endpoints:
