Revert "Feat/issue22 : 친구(사용자) 검색 기능 추가 (#23)"
This reverts commit 2f7be4be0da42b2d38e05070ff2e0c3dc0086440.

--- a/imhere-config/src/main/resources/application.yaml
+++ b/imhere-config/src/main/resources/application.yaml
@@ -5,7 +5,8 @@ spring:
   application:
     name: IMHERE-CONFIG
   profiles:
-    include: git
+    active: git
+    include: private
 
 management:
   endpoints:
