build: add spring security test dependency

--- a/imhere-user-service/build.gradle
+++ b/imhere-user-service/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'org.testcontainers:testcontainers-bom:1.20.2'
     //SPRING SECURITY
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    testImplementation 'org.springframework.security:spring-security-test'
     //SPRING DATA
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
