build : exclude entity class from test report

--- a/imhere-user-service/build.gradle
+++ b/imhere-user-service/build.gradle
@@ -117,6 +117,7 @@ jacocoTestReport {
                     "**/exception/**",
                     "**/common/**",
                     "**/domain/**",
+                    "**/*Entity*",
                     "**/port/**",
                     "**/ImhereUserServiceApplicationKt**",
                     "**/Q*", // QueryDSL Q-types
